adding routes to api

--- a/calabash-festival/src/app/app.component.html
+++ b/calabash-festival/src/app/app.component.html
@@ -1,2 +1,4 @@
 <ngx-loading-bar [includeSpinner]="false" color="#f2d024"></ngx-loading-bar>
 <router-outlet></router-outlet>
+<!--for notifications-->
+<ngx-alerts></ngx-alerts>
