--- a/calabash-festival/src/app/admin/auth/auth.component.html
+++ b/calabash-festival/src/app/admin/auth/auth.component.html
@@ -1,17 +1,17 @@
 <section class="h-full flex justify-center align-items-center">
-  <section class="w-64">
-    <h2 class="font-vibes text-center">Calabash(Admin)</h2>
-    <form action="">
+  <section class="w-1/2">
+    <h2 class="font-vibes text-center">Calabash <small class="text-xs">Music festival</small>(Admin)</h2>
+    <form action="#" [formGroup]="authForm">
       <div class="form-field py-3">
         <label for="username">Username</label>
-        <input id="username" type="text" placeholder="Username" class="rounded w-full px-3 py-3 shadow border" />
+        <input id="username" formControlName="username" type="text" placeholder="Username" class="rounded w-full px-3 py-3 shadow border" />
       </div>
       <div class="form-field py-3">
         <label for="password">Password</label>
-        <input id="password" type="password" placeholder="Password" class="rounded w-full px-3 py-3 shadow border" />
+        <input id="password" formControlName="password" type="password" placeholder="Password" class="rounded w-full px-3 py-3 shadow border" />
       </div>
       <div class="action text-center">
-        <button class="rounded-full py-3 cursor-pointer px-6 shadow bg-yellow-dark mr-4">Login</button>
+        <button (click)="loginUser()" class="rounded-full py-3 cursor-pointer px-6 shadow bg-yellow-dark mr-4">Login</button>
       </div>
     </form>
   </section>
