--- a/calabash-festival/src/app/client/components/toolbar/toolbar.component.html
+++ b/calabash-festival/src/app/client/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="row m-0">
       <ul class="col-sm-6">
         <li class="font-vibes">
-          <a class="brand-name" href="/">Calabash</a>
+          <a class="brand-name" href="/">{{siteTitle}}</a>
           <button (click)="slideMenu()" class="menu-icon px-3"><fa-icon [icon]="menuIcons"></fa-icon></button>
         </li>
       </ul>
