--- a/calabash-festival/src/app/client/components/footer/footer.component.html
+++ b/calabash-festival/src/app/client/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<section id="footer" class="h-64 bg-black">
-
+<section id="footer" class="bg-black py-2 text-white px-8">
+  <p><small>&copy;2019 {{siteTitle}}</small></p>
 </section>
