--- a/calabash-festival/src/app/client/components/toolbar/toolbar.component.scss
+++ b/calabash-festival/src/app/client/components/toolbar/toolbar.component.scss
@@ -16,6 +16,7 @@ nav#client_toolbar {
   line-height: $toolbar-height;
   box-shadow: 0 6px 24px rgba(0, 0, 0, 0.12);
   background-color: $toolbar-bg;
+  color: $toolbar-color;
   ul {
     list-style-type: none;
     background-color: $toolbar-bg;
@@ -34,6 +35,7 @@ nav#client_toolbar {
         position: absolute;
         right: 9%;
         top: 32%;
+        color: $toolbar-color;
       }
     }
 
