press release changes

--- a/calabash-festival/src/app/client/components/footer/footer.component.html
+++ b/calabash-festival/src/app/client/components/footer/footer.component.html
@@ -1,3 +1,18 @@
 <section id="footer" class="bg-black py-2 text-white px-8">
-  <p><small>&copy;2019 {{siteTitle}}</small></p>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="assets/images/logo.jpeg" alt="" class="w-24">
+    </div>
+    <div class="col-sm-4 pt-8">
+      <a href="https://facebook.com/Njeiforbi-Music-Festival-118719682868388/" target="_blank" class="px-3 text-white"><fa-icon [icon]="facebookIcon" size="2x"></fa-icon></a>
+      <a href="https://www.instagram.com/njeiforbi_music_fest/" target="_blank" class="px-3 text-white"><fa-icon [icon]="instagramIcon" size="2x"></fa-icon></a>
+      <a href="" class="px-3 text-white"><fa-icon [icon]="twitterIcon" size="2x"></fa-icon></a>
+    </div>
+    <div class="col-sm-4 pt-8">
+      <a href="mailto:contact@njeiforbimusicfestival.com" class="text-white no-underline"><fa-icon [icon]="emailIcon"></fa-icon>&nbsp;contact@njeiforbimusicfestival.com</a>
+    </div>
+  </div>
+  <div class="w-full">
+    <p><small>&copy;2019 {{siteTitle}}</small></p>
+  </div>
 </section>
