--- a/calabash-festival/src/app/admin/events/events.component.html
+++ b/calabash-festival/src/app/admin/events/events.component.html
@@ -1,7 +1,7 @@
 <app-admin-toolbar></app-admin-toolbar>
 <section id="admin-body">
   <div class="action text-right py-6 px-8">
-    <button class="px-4 py-3 shadow bg-yellow-dark rounded">Add event</button>
+    <button (click)="toggleModal('#createFormModal')" class="px-4 py-3 shadow bg-yellow-dark rounded">Add event</button>
   </div>
   <div class="body px-8 py-4">
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
@@ -26,31 +26,38 @@
         <td>{{event.startDate}}</td>
         <td>{{event.endDate}}</td>
         <td>{{event.venue}}</td>
-        <td><fa-icon [icon]="editIcon"></fa-icon></td>
+        <td (click)="toggleModal('#updateFormModal', i)"><fa-icon [icon]="editIcon"></fa-icon></td>
       </tr>
       </tbody>
     </table>
   </div>
 
-<!--  always put modal in admin-body-->
-  <section class="modal border-t">
+<!--  always put modal in div#admin-body-->
+  <section id="createFormModal" class="modal border-t">
     <div class="modal-title">
-      <h3 class="">Add event</h3>
+      <h3 class="py-3 text-center">Add event</h3>
     </div>
     <div class="modal-body">
-      <form action="" class="row h-full">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-8 border-l h-full">
-          <div class="form-field py-3">
-            <label for="username"></label>
-            <input id="username"  type="text" placeholder="Username" class="rounded w-full px-3 py-3 shadow border" />
-          </div>
-        </div>
-      </form>
+      <app-create-event></app-create-event>
     </div>
-    <div class="modal-action text-right pt-1 px-2">
-      <button class="mr-3 shadow py-3 px-4 rounded bg-yellow-dark">save</button>
-      <button class="shadow py-3 px-4 rounded">cancel</button>
+    <div class="modal-action text-right pt-2 border-t px-2">
+      <button (click)="saveEvent()" class="mr-3 shadow py-2 px-4 rounded bg-yellow-dark">save</button>
+      <button (click)="toggleModal('#createFormModal')" class="shadow py-2 px-4 rounded">cancel</button>
     </div>
   </section>
+  <!--  always put modal in div#admin-body-->
+  <section id="updateFormModal" class="modal border-t">
+    <div class="modal-title">
+      <h3 class="py-3 text-center">Update event</h3>
+    </div>
+    <div class="modal-body">
+      <app-update-event></app-update-event>
+    </div>
+    <div class="modal-action text-right pt-2 border-t px-2">
+      <button (click)="updateEvent()" class="mr-3 shadow py-2 px-4 rounded bg-yellow-dark">save</button>
+      <button (click)="toggleModal('#updateFormModal')" class="shadow py-2 px-4 rounded">cancel</button>
+    </div>
+  </section>
+
+
 </section>
