--- a/calabash-festival/src/app/client/components/toolbar/toolbar.component.html
+++ b/calabash-festival/src/app/client/components/toolbar/toolbar.component.html
@@ -1,18 +1,22 @@
 <header>
   <nav id="client_toolbar">
-    <div class="row m-0">
-      <ul class="col-sm-6">
-        <li class="font-vibes">
-          <a class="brand-name" href="/">{{siteTitle}}</a>
+    <div class="row m-0 h-full">
+      <ul class="col-sm-12 col-lg-4 h-full">
+        <li class="font-vibes h-full">
+          <a class="brand-name h-full" href="/">
+            <img src="assets/images/logo.jpeg" class="h-full" alt="">
+          </a>
           <button (click)="slideMenu()" class="menu-icon px-3"><fa-icon [icon]="menuIcons"></fa-icon></button>
         </li>
       </ul>
-      <ul id="right-nav" class="right col-sm-6">
-        <li><a href="home">Home</a></li>
+      <ul id="right-nav" class="right text-right col-sm-12 col-lg-8 px-8">
+        <li><a href="/home">Home</a></li>
         <li><a href="home#about">About</a></li>
-        <li><a href="home#events">Events</a></li>
+<!--        <li><a href="home#events">Events</a></li>-->
         <li><a href="home#contact">Contact</a></li>
-        <li><a href="home#partner">Become a partner</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/press-release">Press release</a></li>
+        <li><a href="/industry-discovery">Industry discovery</a></li>
       </ul>
     </div>
   </nav>
