--- a/calabash-festival/src/styles.scss
+++ b/calabash-festival/src/styles.scss
@@ -1,8 +1,36 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$calabash-festival-primary: mat-palette($mat-yellow);
+$calabash-festival-accent: mat-palette($mat-pink, 200, 100, 400);
+
+// The warn palette is optional (defaults to red).
+$calabash-festival-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$calabash-festival-theme: mat-light-theme($calabash-festival-primary, $calabash-festival-accent, $calabash-festival-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($calabash-festival-theme);
+
 @import "app/@mixins/mixins";
 /* You can add global styles to this file, and also import other style files */
 * {margin: 0; padding: 0; box-sizing: border-box;}
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #ffffff}
 
 
 .font-vibes {
@@ -22,6 +50,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .modal {
+  display: none;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -52,4 +81,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .dataTables_wrapper .dataTables_filter input, .dataTables_wrapper .dataTables_filter select {
   border: 1px solid #dddddd;
   padding: 0.75rem;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+.row {
+  margin: 0!important;
 }
